2003-09-25  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b95

	* Bugfix: "send password" link was not visible in login.php

	* Bugfix: Anker Tag <a ...></a> around a table is not allowed.
		  Caused albums thumbs to be no link

	* Change: Startpage is valid html again.

	* New: Frame around album thumbs is now configurable

	* Language: Synced against changes

2003-09-24  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b94

	* Modified code around locale alias
	  - Changed behaviour for "optional" back to behaviour <= 1.4.1-cvs-b80
	  - Improved locales alias handling for:
		o Systems without gettext
		o Systems where we cant detect system locales
		o Systems where are some system locales missing, some not
	  - Added "remove_empty" and "allow_empty" for constants
	  - removed function test_locale() from setup/functions.inc

	* Added function gettext_installed() in util.php which returns true or false

	* Use "allow_empty" for slideshow length

	* Fixed somes typos

2003-09-24 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b93

	* Set border="0" for images in frame, so they do not get highlighted.

	* Removed 2 short php tags (oops!).  Thanks Jesse.

2003-09-23  Bharat Mediratta  <bharat@menalto.com> 1.4.1-cvs-b92

	* Suppress a warning in the config wizard for missing locale aliases.

2003-09-24 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b91

	* Added $lastAction, $lastActionDate, $origEmail and log() to class 
	  Gallery_User as the start of proper logging of user actions.

	* Now you can only recover your password every 15 minutes, to 
	  prevent accidental or deliberate blocking of passwords.

	* Use admin email from email config as admin email in UserDB.  
	  From Vallimar.

	* As the album frames are bigger, you can now go to the album
	  by clicking anywhere on image or frame.

	* Encrypt the key sent out for new password, so that people
	  can't access it by looking in the .users directory.

	* Fixed bug where you couldn't change prefs without adding