@@ -1,3 +1,8 @@
+2003-09-26 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b96
+	
+	* Print progress information when upgrading users, so we don't get
+	  "it just hangs" error reports.
+
 2003-09-25  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b95
 
 	* Bugfix: "send password" link was not visible in login.php
